--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
     "require": {},
     "autoload": {
         "psr-4": {
-            "Semperton\\Routing\\": "/src"
+            "Semperton\\Routing\\": "src/"
         }
     }
 }
