--- a/composer.json
+++ b/composer.json
@@ -3,10 +3,13 @@
     "description": "The Semperton Routing component.",
     "type": "library",
     "license": "MIT",
-    "require": {},
     "autoload": {
         "psr-4": {
             "Semperton\\Routing\\": "src/"
         }
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^9.5",
+        "phpbench/phpbench": "^0.17.1"
     }
 }
