--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,10 @@
             "Semperton\\Routing\\": "src/"
         }
     },
+    "scripts": {
+        "test": "phpunit tests",
+        "bench": "phpbench run tests --report=default"
+    },
     "require-dev": {
         "phpunit/phpunit": "^9.5",
         "phpbench/phpbench": "^0.17.1"
