--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^9.5",
-        "phpbench/phpbench": "^0.17.1",
-        "vimeo/psalm": "^4.7"
+        "vimeo/psalm": "^4.7",
+        "phpbench/phpbench": "^1.0"
     }
 }
