--- a/composer.json
+++ b/composer.json
@@ -21,5 +21,8 @@
         "phpunit/phpunit": "^9.5",
         "vimeo/psalm": "^4.7",
         "phpbench/phpbench": "^1.0"
+    },
+    "require": {
+        "php": ">= 7.2"
     }
 }
